# WBC

./: .gitignore  README.md
fa_moveit2_config/: .setup_assistant  CMakeLists.txt  package.xml
fa_moveit2_config/config/: fa_robot.ros2_control.xacro  fa_robot.srdf  fa_robot.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml
fa_moveit2_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
humanoid_description/: CMakeLists.txt  package.xml
humanoid_description/urdf/: humanoid.urdf
humanoid_moveit2_config/: .setup_assistant  CMakeLists.txt  package.xml
humanoid_moveit2_config/config/: humanoid.ros2_control.xacro  humanoid.srdf  humanoid.urdf.xacro  initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  ros2_controllers.yaml
humanoid_moveit2_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
ik_7dof/: CMakeLists.txt  package.xml
ik_7dof/build_check/: CMakeCache.txt  CTestConfiguration.ini
ik_7dof/build_check/ament_cmake_uninstall_target/: ament_cmake_uninstall_target.cmake
ik_7dof/include/ik_7dof/: fa_ik_solver.hpp  ik_solver.hpp
ik_7dof/launch/: arm_ik_rviz.launch.py  fa_arm_kinematic_verify.launch.py  fa_left_arm_ik_test.launch.py  left_arm_ik_test.launch.py
ik_7dof/scripts/: leg_ik_mujoco_verify.py  leg_ik_py.py  leg_ik_usage_and_installation.md
ik_7dof/src/: arm_ik_rviz_node.cpp  fa_arm_kinematic_node.cpp  fa_ik_solver.cpp  fa_left_arm_ik_node.cpp  ik_solver.cpp  left_arm_ik_node.cpp
sysmo_description/: CMakeLists.txt  package.xml
sysmo_description/meshes/: left_ankle_pitch_link.STL  left_ankle_roll_link.STL  left_elbow_link.STL  left_hand_base0_link.STL  left_hip_pitch_link.STL  left_hip_roll_link.STL  left_hip_yaw_link.STL  left_shoulder_pitch_link.STL  left_shoulder_roll_link.STL  left_shoulder_yaw_link.STL  left_wrist_pitch_link.STL  left_wrist_roll_link.STL  left_wrist_yaw_link.STL  neck_pitch_link.STL  neck_yaw_link.STL  pelvis.STL  right_ankle_pitch_link.STL  right_ankle_roll_link.STL  right_elbow_link.STL  right_hip_pitch_link.STL  right_hip_roll_link.STL  right_hip_yaw_link.STL  right_shoulder_pitch_link.STL  right_shoulder_roll_link.STL  right_shoulder_yaw_link.STL  right_wrist_pitch_link.STL  right_wrist_roll_link.STL  right_wrist_yaw_link.STL  waist_pitch_link.STL  waist_roll_link.STL  waist_yaw_link.STL
sysmo_description/mjcf/: fa_robot_combined_body_collision_modified.xml
sysmo_description/test/: check_mass.py  check_one_moment.py  urdf_simplify.py
sysmo_description/urdf/: fa_combined_body_ia.urdf  fa_robot.csv  fa_robot.urdf  fa_robot_combined_body.urdf  fa_robot_combined_body_collision_modified.urdf
